--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/react-hooks": "^8.0.1",
 		"@testing-library/user-event": "^13.5.0",
 		"gh-pages": "^6.1.1",
 		"jest": "^27.5.1",
